fix nav bar collapse

--- a/website/welcomehome/static/base.css
+++ b/website/welcomehome/static/base.css
@@ -11,7 +11,7 @@
 }
 
 .custom-wrapper.open {
-    height: 14em;
+    height: 20em;
 }
 
 .custom-menu-3 {
